--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "axios": "^0.21.1",
     "env-var": "^7.0.1",
     "framer-motion": "^4.1.17",
-    "next": "11.0.1",
-    "react": "17.0.2",
+    "next": "^11.0.1",
+    "react": "^17.0.2",
     "react-device-detect": "^1.17.0",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "sass": "^1.35.2",
     "swiper": "^6.8.0"
